[UNI-38262] Fixed alignment issue when direction is rtl

--- a/src/ux/controlbar.css
+++ b/src/ux/controlbar.css
@@ -56,6 +56,11 @@
   z-index: 100;
 }
 
+[dir="rtl"] .u-controlbar .u-overflow-menu{
+  right: unset;
+  left: 0;
+}
+
 .u-controlbar .u-controlbar-item.u-overflown-item {
   display: none;
 }
